--- a/Quiz/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Quiz/Base.lproj/Main.storyboard
@@ -44,5 +44,23 @@
             </objects>
             <point key="canvasLocation" x="276" y="59"/>
         </scene>
+        <!--Show Score Controller-->
+        <scene sceneID="epS-uZ-WVD">
+            <objects>
+                <viewController id="HHQ-DW-yL9" customClass="ShowScoreController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CYJ-4a-bJr"/>
+                        <viewControllerLayoutGuide type="bottom" id="ypx-Cw-W0V"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PQb-pA-Lts">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dNP-ni-Vdw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="972" y="64"/>
+        </scene>
     </scenes>
 </document>
